--- a/mcacountdown/betatimer.html
+++ b/mcacountdown/betatimer.html
@@ -485,7 +485,7 @@
                             <input type="time" id="schedule-endTime" style="margin-left:10px;" required>
                         </div>
                         <a id="schedule-addOrUpdateEventBtn"><i class="fa-solid fa-plus-circle"></i> Add to Regular Schedule</a>
-			<a href="#exceptiondaycontainer"><i class="fa-solid fa-calendar-day"></i> Add to Exception</a>
+			<a onclick="selectexceptiontoaddevent();"><i class="fa-solid fa-calendar-day"></i> Add to Exception</a>
                         <br>
                         <br>
                         <br>
