Replace Orbitron with Michroma

--- a/mcacountdown/betatimer.html
+++ b/mcacountdown/betatimer.html
@@ -6,9 +6,7 @@
 
     <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=DM+Serif+Display&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400..900&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Castoro:ital@0;1&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Michroma&display=swap" rel="stylesheet">
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" />
     <link rel="icon" type="image/x-icon" href="icon.ico">
@@ -412,7 +410,7 @@
                 <a class="aintext selectedfontpicker" id="fredoka" style="font-family:'Fredoka One'" onmouseup="FontFredoka('Manual'); SetCountDowngeneral();">12:34</a>
                 <a class="aintext fontpicker" id="poppins" style="font-family:'Poppins'" onmouseup="FontPoppins('Manual'); SetCountDowngeneral();">12:34</a>
                 <a class="aintext fontpicker" id="dmserif" style="font-family: 'DM Serif Display', serif;" onmouseup="FontDMSerif('Manual'); SetCountDowngeneral();">12:34</a>
-                <a class="aintext fontpicker" id="orbitron" style="font-family:'Orbitron'" onmouseup="FontOrbitron('Manual'); SetCountDowngeneral();">12:34</a>
+                <a class="aintext fontpicker" id="michroma" style="font-family:'Michroma'; font-size:15px;" onmouseup="FontMichroma('Manual'); SetCountDowngeneral();">12:34</a>
                 <br>
                 <br>
                 <Br>
