--- a/index.html
+++ b/index.html
@@ -206,7 +206,7 @@ new            </p>
     <section class="considering">
         <h1 style="margin:30px">Let's make something cool together. <a style="color: #240200; cursor:pointer;" target="_blank" rel="noopener noreferrer" href="mailto:contact@michaeldors.com">Get In Touch<i style="margin-left:10px;" class="fa-solid fa-chevron-right"></i></a></h1>
     </section>
-    <div style="background: #ff2121;">
+    <div style="background: #ff2121 !important;">
         <section style="border-top-right-radius:50px; border-top-left-radius:50px;">
             <div style="border-top-right-radius:50px; border-top-left-radius:50px;">
                 <div class="footer">
