--- a/projects.html
+++ b/projects.html
@@ -138,14 +138,14 @@ document.head.appendChild(script);
             </p>
             <a class="glowbutton" target="_blank" rel="noopener noreferrer" href="http://mk.michaeldors.com">Get It Free</a>
         </section>
-        <section class="projectarea" data-projecttype="instagram">
-            <h1 data-aos="fade-up">michaeldorsdotcom</h1>
-            <h2 data-aos="fade-up">Instagram</h2>
-            <img data-aos="fade-up" class="headerimg" src="headers/instagram.png" />
+        <section class="projectarea" data-projecttype="website">
+            <h1 data-aos="fade-up">Canvas</h1>
+            <h2 data-aos="fade-up">Website</h2>
+            <img data-aos="fade-up" class="headerimg" src="headers/canvascover.png" />
             <p data-aos="fade-up">
-                Public Instagram account for this website
+                Basic site editor for clients to make their own changes
             </p>
-            <a class="glowbutton" target="_blank" rel="noopener noreferrer" href="http://instagram.com/michaeldorsdotcom/">Follow</a>
+            <a class="glowbutton" target="_blank" rel="noopener noreferrer" href="canvas/editor.html">Edit a Site</a>
         </section>
         <section class="projectarea" data-projecttype="website">
             <h1 data-aos="fade-up">Wiffdle</h1>
