--- a/mcacountdown/betatimer.html
+++ b/mcacountdown/betatimer.html
@@ -9,6 +9,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Michroma&display=swap" rel="stylesheet">
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" />
+    <script src="https://cdn.jsdelivr.net/npm/ical.js@1.5.0/dist/ical.min.js"></script>
     <link rel="icon" type="image/x-icon" href="icon.ico">
     <meta name="theme-color" content="#8426ff" />
 
@@ -31,33 +32,6 @@
     <meta property="og:site_name" content="Michael Dors" />
     <link rel="apple-touch-icon" href="Images/countdownhomescreen.png">
 </head>
-<!-- Google tag (gtag.js) -->
-<script>
-    function getCookie(name) {
-          var nameEQ = name + "=";
-          var ca = document.cookie.split(';');
-          for (var i = 0; i < ca.length; i++) {
-              var c = ca[i];
-              while (c.charAt(0) == ' ') c = c.substring(1, c.length);
-              if (c.indexOf(nameEQ) == 0) return c.substring(nameEQ.length, c.length);
-          }
-          return null;
-      }
-  
-  if(getCookie("cookiesAccepted")){
-  var script = document.createElement('script');
-  script.setAttribute("async", "");
-  script.src = "https://www.googletagmanager.com/gtag/js?id=G-LCNP5E1F65";
-  
-  document.head.appendChild(script);
-      
-  window.dataLayer = window.dataLayer || [];
-    function gtag(){dataLayer.push(arguments);}
-    gtag('js', new Date());
-  
-    gtag('config', 'G-LCNP5E1F65');
-      }
-  </script>
 
 <body id="body">
     <input onblur="setcountdowntitle('front');" id="countdowntitle" type="text" />
