--- a/mcacountdown/betatimer.html
+++ b/mcacountdown/betatimer.html
@@ -9,7 +9,6 @@
     <link href="https://fonts.googleapis.com/css2?family=Michroma&display=swap" rel="stylesheet">
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" />
-    <script src="https://cdn.jsdelivr.net/npm/ical.js@1.5.0/dist/ical.min.js"></script>
     <link rel="icon" type="image/x-icon" href="icon.ico">
     <meta name="theme-color" content="#8426ff" />
 
@@ -90,7 +89,7 @@
     <div class="cookiebanner" id="cookie-banner">
         <img id="cookiebannerimg" src="Backgrounds/cookie_bite.png">
         <div>
-            <p style="font-family:Dosis; font-size:25px; color:white;"> We use cookies and similar technologies for preferences and anonymous analytics. <a class="aintext" style="font-family:Dosis; font-size:25; color:white; text-decoration:underline" href="Information/cookiepolicy.html">Learn more</a> or <a id="accept-cookies" class="aintext" style="font-family:Dosis; font-size:25; color:#aa68ff; text-decoration:underline">accept</a>.</p>
+            <p style="font-family:Dosis; font-size:25px; color:white;"> We use cookies and similar technologies to privately save user preferences and content. <br> <a class="aintext" style="font-family:Dosis; font-size:25; color:white; text-decoration:underline" href="Information/cookiepolicy.html">Learn more</a> or <a id="accept-cookies" class="aintext" style="font-family:Dosis; font-size:25; color:#aa68ff; text-decoration:underline">accept</a>.</p>
         </div>
     </div>
 
