add Google Calendar import support

--- a/mcacountdown/betatimer.html
+++ b/mcacountdown/betatimer.html
@@ -434,6 +434,7 @@
                         </div>
                         <a id="schedule-addOrUpdateEventBtn"><i class="fa-solid fa-plus-circle"></i> Add to Regular Schedule</a>
 			<a onclick="selectexceptiontoaddevent();"><i class="fa-solid fa-calendar-day"></i> Add to Exception</a>
+                        <a onclick="importICSFile();"><i class="fa-solid fa-file-import"></i> Import ICS File</a>
                         <br>
                         <br>
                         <br>
