--- a/mcacountdown/betatimer.html
+++ b/mcacountdown/betatimer.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <head>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -188,8 +189,8 @@
                 <br>
                 <Br>
                 <a title="Close options" onclick="settings(); SetCountDowngeneral();"><i class="fa-solid fa-gear"></i> Close</a>
-                <a title="Get a shareable link or QR code" id="sharebuttonoptions" href="#linkoptions"><i class="fa-solid fa-arrow-up-from-bracket"></i> Share</a>
-		<a title="Countdown Dashboard" id="dashboardbuttonoptions" href="https://michaeldors.com/mcacountdown/countdowndashboard"><i class="fa-solid fa-border-all"></i> Dashboard</a>
+                <a title="Get a shareable link or QR code" id="sharebuttonoptions" class="sharebutton" href="#linkoptions"><i class="fa-solid fa-arrow-up-from-bracket"></i> Share</a>
+		<a title="Countdown Dashboard" id="dashboardbuttonoptions" class="dashboardbutton" href="https://michaeldors.com/mcacountdown/countdowndashboard"><i class="fa-solid fa-border-all"></i> Dashboard</a>
                 <a title="Save to Countdown Dashboard" id="savedash" class="savedash" onclick="savetodash();"><i class="fa-solid fa-star"></i> Save</a>
 
 		<div id="debugoptions" style="display:none;">
@@ -278,15 +279,17 @@
 		<p id="qrcodelinkcautiontext" style="font-family: 'Dosis', sans-serif; font-size:16px; margin-bottom:50px;">
                     Be cautious of sharing personal information
                 </p>
-		<div id="localshortcutcontainerdiv" style="border-radius: 20px; background: #fe9a00; margin-bottom:125px; color: black; padding:20px; min-width:fit-content;">
+		<div id="localshortcutcontainerdiv" style="border-radius: 20px; background: #00df52; margin-bottom:125px; color: black; padding:20px; min-width:fit-content; max-width: 75%;">
                         <p style="color:black; font-size:27px;"><i class="fa-solid fa-location-pin-lock"></i> Local Shortcut</p>
                         <p style="font-family: 'Dosis', sans-serif; color:black; font-size:16px;">
-                            For a dynamic bookmark that updates with changes saved</br>to Dashboard, use your personal Local Shortcut link:
+                            For a dynamic bookmark that updates with changes saved</br>to Dashboard, use your personal Local Shortcut link
                         </p>
 			<input id="locallinkinput" class="localshortcutinput" />
                 	<button style="background:transparent; border:none; outline:none; cursor:pointer">
                     		<i title="Copy Local Shortcut" class="fa fa-clone" style="transform:scale(1.75); padding-left:10px; color:#000000;" onclick="copyinputtextlocalshortcutlink(); showToast('Local Shortcut link copied', 'success');"></i>
                 	</button>
+                    <br>
+            <a style="color: black; font-family:'Dosis'; margin-top:20px;" class="aintext" href="docs.html#dashboard"><i class="fa-solid fa-circle-info"></i> More info</a>
 			<br>
 			<br>
                 </div>
@@ -423,6 +426,15 @@
 		</div>
                 <div class="schedule-editor">
                     <div class="schedule-container">
+                        <div id="scheduleimportcontainer" style="border-radius: 20px; background: #001e30; margin-bottom:125px; color: white !important; padding:20px; min-width:fit-content; max-width: 75%;">
+                            <h1 style="color: white;">Import your schedule</h1>
+                            <p style="color: white;">Import an exported calendar from any major calendar service</p>
+                            <a class="sharebutton" onclick="importICSFile();"><i class="fa-solid fa-calendar-week"></i> Import Calendar</a>
+                            <a class="sharebutton" href="docs.html#export-cal-to-schedule"><i class="fa-solid fa-circle-question"></i> How To Export</a>
+                        </div>
+                        <div id="scheduleimportcontainer" style="border-radius: 20px; background: #3ab6ff; margin-bottom:125px; color: black; padding:20px; min-width:fit-content; max-width: 75%;">
+                            <a class="betabutton"><i class="fa-solid fa-wand-magic-sparkles"></i> Generate Schedule with Gemini</a>
+                        </div>
                         <h2 style="font-family: 'Dosis';">Edit Schedule</h2>
                         <div class="schedule-form-group">
                             <input type="text" placeholder="Pick a title" id="schedule-eventTitle" required>
@@ -434,7 +446,6 @@
                         </div>
                         <a id="schedule-addOrUpdateEventBtn"><i class="fa-solid fa-plus-circle"></i> Add to Regular Schedule</a>
 			<a onclick="selectexceptiontoaddevent();"><i class="fa-solid fa-calendar-day"></i> Add to Exception</a>
-                        <a onclick="importICSFile();"><i class="fa-solid fa-file-import"></i> Import ICS File</a>
                         <br>
                         <br>
                         <br>
