--- a/mcacountdown/docs.html
+++ b/mcacountdown/docs.html
@@ -318,7 +318,7 @@ if (window.matchMedia && window.matchMedia('(prefers-color-scheme: dark)').match
 <body>
     <div class="sidebar">
         <div style="position: relative;">
-            <input type="text" id="search" class="search-bar" list="settingsheaders" placeholder="Search for an option" onkeyup="searchDocs();">
+            <input type="text" id="search" class="search-bar" list="settingsheaders" placeholder="Search through the documentation" onkeyup="searchDocs();">
         </div>
         <ul id="search-results"></ul>
         <ul id="sidebar-links">
