--- a/mcacountdown/docs.html
+++ b/mcacountdown/docs.html
@@ -9,6 +9,15 @@
     <link href="https://fonts.googleapis.com/css2?family=Fredoka+One&family=Dosis:wght@600&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" />
 
+    <link rel="icon" type="image/x-icon" href="icon.ico">
+    <meta name="theme-color" content="#8426ff" />
+    <meta property="og:image" content="https://michaeldors.com/Images/countdowncover.jpg" />
+    <meta property="og:title" content="Countdown Documentation - Michael Dors" />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://michaeldors.com/mcacountdown/docs" />
+    <meta property="og:description" content="Documentation for Countdown" />
+    <meta property="og:site_name" content="Michael Dors" />
+    <link rel="apple-touch-icon" href="Images/countdownhomescreen.png">
     <style>
         :root {
     --one: #8426ff;
