--- a/mcacountdown/docs.html
+++ b/mcacountdown/docs.html
@@ -548,6 +548,28 @@ if (window.matchMedia && window.matchMedia('(prefers-color-scheme: dark)').match
             <p>For that reason, Personal options cannot be shared in a link, as they are designed to accomidate a user, not a Countdown. Instead, they're stored as cookies in the browser. This way, they're applied across all Countdowns.</p>
             <p>Personal options include animation speed, labeling time units, disbling confetti, disabling ending sounds, saving memory when inactive, increasing contrast, and only including certani time units.</p>
         </div>
+        <div id="cookiepolicy" class="section">
+            <h1>Cookie Policy</h1>
+            <p>Countdown utilizes cookies and other similar technologies to enhance your experience and improve the website's functionality. Cookies are small files stored on your browser to save preferences, track usage, and gather analytical data. Here's how we use them:</p>
+            <h2>Use of Cookies</h2>
+            <p>We utilize cookies to save your accessibility settings and other personal options, which are only stored when enabled and deleted when disabled. Additionally, other local storage technologies are used to store more save data, such as Dashboards.</p>
+            <h2>Cookie Duration</h2>
+            <p>Settings cookies are saved for 70 days or until the setting is disabled. This allows us to remember a user's setting. Other technologies, like the ones we use to store Dashboards, may persist for a varying amount of time depending on the user's browser or other variables.</p>
+            <h2>Managing Cookies</h2>
+            <p>You can opt out of cookies in several ways:<br>- Avoid using personal options to prevent any cookies from being placed on your device.<br>- Use the "Reset All" option in the options menu to clear all personal options cookies, then reload the page.<br>- Manually reset/disable each preference through the personal section of the options menu.<br>- Remove cookies through your browser's UI.</p>
+            <h2>Consent and Transparency</h2>
+            <p>We inform users about our use of cookies and other technologies, seeking consent before placing any cookies on their device. We do not use cookies in any way to track, identify, or collect data on the user.</p>
+            <h2>Contact</h2>
+            <p>If you have questions about cookies or anything else, feel free to reach out to us at <a class="aintext" href="mailto:contact@michaeldors.com">contact@michaeldors.com</a></p>
+        </div>
+        <div id="foregroundvbackground" class="section">
+            <h1>Foreground Color or Backgrounds</h1>
+            <p>Countdowns and Countdown Schedules can either have Foreground Colors, or an animated background</p>
+            <h2>How do Foreground Colors work?</h2>
+            <p>Foreground Colors allow the user to pick 1-8 colors that will cycle through the main foreground element. In Countdowns, that's the clock and progress bar. In Countdown Schedules, that's the current event header at the top. The Countdown will cycle through the colors you pick. As you're in charge of the colors, make sure you account for contrast and ensure it's readable.</p>
+            <h2>How do Backgrounds work?</h2>
+            <p>Backgrounds are premade, animated gradients that flow around the screen. When you enable a Background, it disables the Foreground Colors since the Background fills the entire screen.</p>
+        </div>
     </div>
 </body>
 </html>
