--- a/mcacountdown/docs.html
+++ b/mcacountdown/docs.html
@@ -566,7 +566,7 @@ if (window.matchMedia && window.matchMedia('(prefers-color-scheme: dark)').match
             <h1>Foreground Color or Backgrounds</h1>
             <p>Countdowns and Countdown Schedules can either have Foreground Colors, or an animated background</p>
             <h2>How do Foreground Colors work?</h2>
-            <p>Foreground Colors allow the user to pick 1-8 colors that will cycle through the main foreground element. In Countdowns, that's the clock and progress bar. In Countdown Schedules, that's the current event header at the top. The Countdown will cycle through the colors you pick. As you're in charge of the colors, make sure you account for contrast and ensure it's readable.</p>
+            <p>Foreground Colors allow the user to pick 1-8 colors that will cycle through the main foreground element. In Countdowns, that's the clock and progress bar. In Countdown Schedules, the current event header is filled instead of the clock. The Countdown will cycle through the colors you pick. As you're in charge of the colors, make sure you account for contrast and ensure it's readable.</p>
             <h2>How do Backgrounds work?</h2>
             <p>Backgrounds are premade, animated gradients that flow around the screen. When you enable a Background, it disables the Foreground Colors since the Background fills the entire screen.</p>
         </div>
