--- a/mcacountdown/betatimer.html
+++ b/mcacountdown/betatimer.html
@@ -426,15 +426,15 @@
 		</div>
                 <div class="schedule-editor">
                     <div class="schedule-container">
-                        <div id="scheduleimportcontainer" style="border-radius: 20px; background: #001e30; margin-bottom:125px; color: white !important; padding:20px; min-width:fit-content; max-width: 75%;">
+                        <div id="scheduleimportcontainer" style="border-radius: 20px; background: #001e30; margin-bottom:75px; color: white !important; padding:20px; min-width:fit-content; max-width: 75%;">
                             <h1 style="color: white;">Import your schedule</h1>
                             <p style="color: white;">Import an exported calendar from any major calendar service</p>
                             <a class="sharebutton" onclick="importICSFile();"><i class="fa-solid fa-calendar-week"></i> Import Calendar</a>
                             <a class="sharebutton" href="docs.html#export-cal-to-schedule"><i class="fa-solid fa-circle-question"></i> How To Export</a>
                         </div>
-                        <div id="scheduleimportcontainer" style="border-radius: 20px; background: #3ab6ff; margin-bottom:125px; color: black; padding:20px; min-width:fit-content; max-width: 75%;">
+                        <!--<div id="scheduleimportcontainer" style="border-radius: 20px; background: #3ab6ff; margin-bottom:125px; color: black; padding:20px; min-width:fit-content; max-width: 75%;">
                             <a class="betabutton"><i class="fa-solid fa-wand-magic-sparkles"></i> Generate Schedule with Gemini</a>
-                        </div>
+                        </div>-->
                         <h2 style="font-family: 'Dosis';">Edit Schedule</h2>
                         <div class="schedule-form-group">
                             <input type="text" placeholder="Pick a title" id="schedule-eventTitle" required>
