--- a/mcacountdown/betatimer.html
+++ b/mcacountdown/betatimer.html
@@ -235,8 +235,12 @@
                         <li title="Timekeeper will automatically pick the next upcoming holiday" id="autopilottab" class="autopilottab" onclick="autopilottab(); autopilotsparkle(event); SetCountDowngeneral();"><i class="fa-solid fa-business-time"></i> Second Sense</li>
                         <li id="endtab" class="mcatab" onclick="MES(); SetCountDowngeneral();">MCA</li>
                         <li id="nydtab" class="tab" onclick="NYD(); SetCountDowngeneral();">New Year's Day</li>
+                        <li id="mlktab" class="tab" onclick="MLK(); SetCountDowngeneral();">MLK Jr. Day</li>
+                        <li id="groundhogtab" class="tab" onclick="GROUNDHOG(); SetCountDowngeneral();">Groundhog Day</li>
                         <li id="vdtab" class="tab" onclick="VD(); SetCountDowngeneral();">Valentine's Day</li>
+                        <li id="stpatrickstab" class="tab" onclick="SDP(); SetCountDowngeneral();">St. Patrick's</li>
                         <li id="endtab" class="tab" onclick="EASTER(); SetCountDowngeneral();">Easter</li>
+                        <li id="cincotab" class="tab" onclick="CINCO(); SetCountDowngeneral();">Cinco de Mayo</li>
                         <li id="idtab" class="tab" onclick="ID(); SetCountDowngeneral();">Independence Day</li>
                         <li id="htab" class="tab" onclick="H(); SetCountDowngeneral();">Halloween</li>
                         <li id="ttab" class="tab" onclick="T(); SetCountDowngeneral();">Thanksgiving</li>
