--- a/mcacountdown/betatimer.html
+++ b/mcacountdown/betatimer.html
@@ -208,6 +208,7 @@
         <a onclick="autopilotsparkle()">sparkle</a>
 	<a onclick="startConfettiManagerAnimation();">Confetti</a>
 	<a onclick="stopConfettiManagerAnimation();">Stop Confetti</a>
+    <a onclick="reorderHolidayTabs();">Dynamically order date presets</a>
 		<a href="http://michaeldors.github.io/mcacountdown/Information/testing.countdown">Download Testing Dashboard Save</a>
 
 		</div>
@@ -239,7 +240,7 @@
                         <li id="groundhogtab" class="tab" onclick="GROUNDHOG(); SetCountDowngeneral();">Groundhog Day</li>
                         <li id="vdtab" class="tab" onclick="VD(); SetCountDowngeneral();">Valentine's Day</li>
                         <li id="stpatrickstab" class="tab" onclick="SDP(); SetCountDowngeneral();">St. Patrick's</li>
-                        <li id="endtab" class="tab" onclick="EASTER(); SetCountDowngeneral();">Easter</li>
+                        <li id="eastertab" class="tab" onclick="EASTER(); SetCountDowngeneral();">Easter</li>
                         <li id="cincotab" class="tab" onclick="CINCO(); SetCountDowngeneral();">Cinco de Mayo</li>
                         <li id="idtab" class="tab" onclick="ID(); SetCountDowngeneral();">Independence Day</li>
                         <li id="htab" class="tab" onclick="H(); SetCountDowngeneral();">Halloween</li>
