--- a/mcacountdown/betatimer.html
+++ b/mcacountdown/betatimer.html
@@ -90,7 +90,7 @@
     <div class="cookiebanner" id="cookie-banner">
         <img id="cookiebannerimg" src="Backgrounds/cookie_bite.png">
         <div>
-            <p style="font-family:Dosis; font-size:25px; color:white;"> We use cookies and similar technologies to privately save user preferences and content. <br> <a class="aintext" style="font-family:Dosis; font-size:25; color:white; text-decoration:underline" href="Information/cookiepolicy.html">Learn more</a> or <a id="accept-cookies" class="aintext" style="font-family:Dosis; font-size:25; color:#aa68ff; text-decoration:underline">accept</a>.</p>
+            <p style="font-family:Dosis; font-size:25px; color:white;"> We use cookies and similar technologies to privately save user preferences and content. <br> <a class="aintext" style="font-family:Dosis; font-size:25; color:white; text-decoration:underline" href="Information/cookiepolicy.html" target="_blank" rel="noopener noreferrer">Learn more</a> or <a id="accept-cookies" class="aintext" style="font-family:Dosis; font-size:25; color:#aa68ff; text-decoration:underline">accept</a>.</p>
         </div>
     </div>
 
@@ -183,8 +183,8 @@
                 <h1 class="textelement">Options</h1>
                 <p class="textelement" style="max-width:85%;">
 		<a class="aintext dependencieslink" href="http://605958.xyz/"><i style="margin-right:10px;" class="fa-solid fa-house"></i> Home</a>
-                    <a class="aintext dependencieslink" href="Information/cookiepolicy"><i style="margin-right:10px;" class="fa-solid fa-cookie-bite"></i> Cookie Policy</a>
-                    <a class="aintext dependencieslink" href="Information/dependencies"><i style="margin-right:10px;" class="fa-solid fa-file-code"></i> Dependencies</a>
+                    <a class="aintext dependencieslink" href="Information/cookiepolicy" target="_blank" rel="noopener noreferrer"><i style="margin-right:10px;" class="fa-solid fa-cookie-bite"></i> Cookie Policy</a>
+                    <a class="aintext dependencieslink" href="Information/dependencies" target="_blank" rel="noopener noreferrer"><i style="margin-right:10px;" class="fa-solid fa-file-code"></i> Dependencies</a>
                 </p>
                 <br>
                 <Br>
@@ -294,7 +294,7 @@
                     		<i title="Copy Local Shortcut" class="fa fa-clone" style="transform:scale(1.75); padding-left:10px; color:#000000;" onclick="copyinputtextlocalshortcutlink(); showToast('Local Shortcut link copied', 'success');"></i>
                 	</button>
                     <br>
-            <a style="color: black; font-family:'Dosis'; margin-top:20px;" class="aintext" href="docs.html#dashboard"><i class="fa-solid fa-circle-info"></i> More info</a>
+            <a style="color: black; font-family:'Dosis'; margin-top:20px;" class="aintext" href="docs#dashboard" target="_blank" rel="noopener noreferrer"><i class="fa-solid fa-circle-info"></i> More info</a>
 			<br>
 			<br>
                 </div>
@@ -435,7 +435,7 @@
                             <h1 style="color: white;">Import your schedule</h1>
                             <p style="color: white;">Import an exported calendar from any major calendar service</p>
                             <a class="sharebutton" onclick="importICSFile();"><i class="fa-solid fa-calendar-week"></i> Import Calendar</a>
-                            <a class="sharebutton" href="docs.html#export-cal-to-schedule"><i class="fa-solid fa-circle-question"></i> How To Export</a>
+                            <a class="sharebutton" href="docs#export-cal-to-schedule" target="_blank" rel="noopener noreferrer"><i class="fa-solid fa-circle-question"></i> How To Export</a>
                         </div>
                         <!--<div id="scheduleimportcontainer" style="border-radius: 20px; background: #3ab6ff; margin-bottom:125px; color: black; padding:20px; min-width:fit-content; max-width: 75%;">
                             <a class="betabutton"><i class="fa-solid fa-wand-magic-sparkles"></i> Generate Schedule with Gemini</a>
