--- a/mcacountdown/betatimer.html
+++ b/mcacountdown/betatimer.html
@@ -183,7 +183,7 @@
                 <h1 class="textelement">Options</h1>
                 <p class="textelement" style="max-width:85%;">
 		<a class="aintext dependencieslink" href="http://605958.xyz/"><i style="margin-right:10px;" class="fa-solid fa-house"></i> Home</a>
-                    <a class="aintext dependencieslink" href="Information/cookiepolicy" target="_blank" rel="noopener noreferrer"><i style="margin-right:10px;" class="fa-solid fa-cookie-bite"></i> Cookie Policy</a>
+                    <a class="aintext dependencieslink" href="docs#cookiepolicy" target="_blank" rel="noopener noreferrer"><i style="margin-right:10px;" class="fa-solid fa-cookie-bite"></i> Cookie Policy</a>
                     <a class="aintext dependencieslink" href="Information/dependencies" target="_blank" rel="noopener noreferrer"><i style="margin-right:10px;" class="fa-solid fa-file-code"></i> Dependencies</a>
                 </p>
                 <br>
