--- a/mcacountdown/countdowndashboard.html
+++ b/mcacountdown/countdowndashboard.html
@@ -1327,6 +1327,22 @@ filter: blur(60px);
   right: 50%;
   transform: translateX(50%);
 }
+
+        a {
+        font-family: 'Fredoka One';
+        background-color: #8426ff;
+        text-decoration: none;
+        color: white;
+        padding: 15px;
+        border-radius: 1000px;
+        user-select: none;
+        cursor: pointer;
+        font-size: 15px;
+        font-weight: 100;
+        display: inline-block;
+        width:20px;
+        height:20px;
+    }
 }
 
 .presetswrapper {
