--- a/mcacountdown/countdowndashboard.html
+++ b/mcacountdown/countdowndashboard.html
@@ -905,7 +905,7 @@ h1 {
     z-index: 1000000000000000;
     left:50%;
     transform: translateX(-50%);
-    min-width:fit-content;
+    width:100vw;
 }
 
 input, button {
