--- a/mcacountdown/countdowndashboard.html
+++ b/mcacountdown/countdowndashboard.html
@@ -1328,6 +1328,13 @@ filter: blur(60px);
   transform: translateX(50%);
 }
 
+.notch-container {
+zoom:65%;
+    }
+.input-container {
+zoom:65%;
+    }
+
 }
 
 .presetswrapper {
