--- a/mcacountdown/countdowndashboard.html
+++ b/mcacountdown/countdowndashboard.html
@@ -955,6 +955,21 @@ button:hover {
     transform: translateX(0);
     will-change: transform, opacity;
     z-index: 2000;
+    box-shadow: 
+    0 2px 4px rgba(0, 0, 0, 0.15),
+    inset 0 1px 0 rgba(255, 255, 255, 0.4),
+    inset 0 -1px 0 rgba(0, 0, 0, 0.1);
+  border: 1px solid rgba(0, 0, 0, 0.05);
+}
+
+.card::before {
+  content: "";
+  position: absolute;
+  inset: 0;
+  border-radius: 20px;
+  background: linear-gradient(to bottom right, rgba(255,255,255,0.2), transparent);
+  pointer-events: none;
+  mix-blend-mode: screen;
 }
 
 .card.currentlybeingdeleted{
