--- a/mcacountdown/countdowndashboard.html
+++ b/mcacountdown/countdowndashboard.html
@@ -962,7 +962,7 @@ button:hover {
   border: 1px solid rgba(0, 0, 0, 0.05); /* subtle outline */
 }
 
-.card::before {
+.card::after {
   content: "";
   position: absolute;
   inset: 0;
