--- a/mcacountdown/countdowndashboard.html
+++ b/mcacountdown/countdowndashboard.html
@@ -970,8 +970,25 @@ button:hover {
   background: linear-gradient(to bottom right, rgba(255,255,255,0.1), transparent);
   pointer-events: none;
   mix-blend-mode: screen;
-  z-index:1000000;
+  z-index:10000000;
 }
+
+.card::before {
+  content: "";
+  position: absolute;
+  inset: 0;
+  border-radius: 15px;
+  pointer-events: none;
+  z-index: 1000000;
+
+  box-shadow: 
+    0 2px 4px rgba(0, 0, 0, 0.15), /* drop shadow */
+    inset 0 1.3px 0 rgba(255, 255, 255, 0.2), /* top edge */
+    inset 0 -1.3px 0 rgba(0, 0, 0, 0.1); /* bottom edge */
+
+  border: 1px solid rgba(0, 0, 0, 0.05); /* outer border */
+}
+
 
 .card.currentlybeingdeleted{
     transform: scale(0.8) !important;
