--- a/mcacountdown/countdowndashboard.html
+++ b/mcacountdown/countdowndashboard.html
@@ -977,6 +977,8 @@ button:hover {
   z-index: 1000000;
 
   box-shadow: 
+  0 2px 4px rgba(0, 0, 0, 0.15), /* bottom soft shadow */
+
     inset 0 1.3px 0 rgba(255, 255, 255, 0.3), /* top edge */
     inset 0 -1.3px 0 rgba(0, 0, 0, 0.1); /* bottom edge */
 
