--- a/mcacountdown/countdowndashboard.html
+++ b/mcacountdown/countdowndashboard.html
@@ -955,6 +955,8 @@ button:hover {
     transform: translateX(0);
     will-change: transform, opacity;
     z-index: 2000;
+
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.15); /* bottom soft shadow */
 }
 
 .card::after {
@@ -977,8 +979,6 @@ button:hover {
   z-index: 1000000;
 
   box-shadow: 
-  0 2px 4px rgba(0, 0, 0, 0.15), /* bottom soft shadow */
-
     inset 0 1.3px 0 rgba(255, 255, 255, 0.3), /* top edge */
     inset 0 -1.3px 0 rgba(0, 0, 0, 0.1); /* bottom edge */
 
