--- a/mcacountdown/countdowndashboard.html
+++ b/mcacountdown/countdowndashboard.html
@@ -956,7 +956,8 @@ button:hover {
     will-change: transform, opacity;
     z-index: 2000;
 
-    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.15); /* bottom soft shadow */
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.15), /* bottom soft shadow */
+    inset 0 -1.3px 0 rgba(0, 0, 0, 0.1);
 }
 
 .card::after {
@@ -979,8 +980,7 @@ button:hover {
   z-index: 1000000;
 
   box-shadow: 
-    inset 0 1.5px 0 rgba(255, 255, 255, 0.3), /* top edge */
-    inset 0 -1.3px 0 rgba(0, 0, 0, 0.1); /* bottom edge */
+    inset 0 1.5px 0 rgba(255, 255, 255, 0.3); /* top edge */
 
   border: 1px solid rgba(0, 0, 0, 0.05); /* outer border */
 }
