--- a/mcacountdown/countdowndashboard.html
+++ b/mcacountdown/countdowndashboard.html
@@ -980,7 +980,8 @@ button:hover {
   z-index: 1000000;
 
   box-shadow: 
-    inset 0 1.54px 0 rgba(255, 255, 255, 0.2); /* top edge */
+    inset 0 1.54px 0 rgba(255, 255, 255, 0.3), /* top edge */
+    inset 0 0 18px rgba(255, 255, 255, 0.3);
 
   border: 1.54px solid rgba(0, 0, 0, 0.1); /* outer border */
 }
