--- a/mcacountdown/countdowndashboard.html
+++ b/mcacountdown/countdowndashboard.html
@@ -822,6 +822,7 @@ document.addEventListener('drop', (event) => {
             document.documentElement.style.setProperty('--blurbackgroundshadow', '0 8px 16px rgba(255, 255, 255, 0.1)');
             document.documentElement.style.setProperty('--placeholderbg', 'rgba(235, 235, 235, 0.43)');
 	    document.documentElement.style.setProperty('--placeholderbordercolor', '#bababa');
+        document.documentElement.style.setProperty('--cardbeforeglow', 'inset 0 1.54px 0 rgba(255, 255, 255, 0.3), inset 0 0 18px rgba(255, 255, 255, 0.3);');
         }
         
         function setDarkMode() {
@@ -831,6 +832,7 @@ document.addEventListener('drop', (event) => {
             document.documentElement.style.setProperty('--blurbackgroundshadow', '0 8px 16px rgba(0, 0, 0, 0.45)');
 	    document.documentElement.style.setProperty('--placeholderbg', 'rgba(20, 20, 20, 0.23)');
 	    document.documentElement.style.setProperty('--placeholderbordercolor', '#666');
+        document.documentElement.style.setProperty('--cardbeforeglow', 'inset 0 1.54px 0 rgba(255, 255, 255, 0.3);');
         }
 
 window.matchMedia('(prefers-color-scheme: dark)').addEventListener('change', event => {
@@ -858,6 +860,9 @@ loadLinks();
 	/*rgba(220, 220, 220, 0.23)*/
 	--placeholderbordercolor: #666;
 	/*#bababa*/
+    --cardbeforeglow: inset 0 1.54px 0 rgba(255, 255, 255, 0.3);
+    /*inset 0 1.54px 0 rgba(255, 255, 255, 0.3), inset 0 0 18px rgba(255, 255, 255, 0.3);*/
+    /*
 }
 *{
     user-select: none;
@@ -979,9 +984,7 @@ button:hover {
   pointer-events: none;
   z-index: 1000000;
 
-  box-shadow: 
-    inset 0 1.54px 0 rgba(255, 255, 255, 0.3), /* top edge */
-    inset 0 0 18px rgba(255, 255, 255, 0.3);
+  box-shadow: var(--cardbeforeglow);
 
   border: 1.54px solid rgba(0, 0, 0, 0.1); /* outer border */
 }
