--- a/mcacountdown/countdowndashboard.html
+++ b/mcacountdown/countdowndashboard.html
@@ -909,7 +909,7 @@ h1 {
     margin: 0px 0;
     flex-wrap: wrap;
     bottom:15px;
-    position: absolute;
+    position: fixed;
     z-index: 1000000000000000;
     left:50%;
     transform: translateX(-50%);
