--- a/mcacountdown/countdowndashboard.html
+++ b/mcacountdown/countdowndashboard.html
@@ -1309,7 +1309,7 @@ margin:16px
 }
 
 .toast-close {
-background: none;
+background: none !important;
 border: none;
 color: #ffffff;
 cursor: pointer;
